--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,1 +1,26 @@
-<p>about works!</p>
+<section class="full">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="../assets/images/about.png" alt="" class="imgabout" srcset="">
+      </div>
+      <div class="col">
+        <div>
+          <h1>Qui sommes nous</h1>
+          <p class="p1">Vous chercher à louer acheter vendre mettre à location un bien immobimlié ? Contactez nous </p>
+          <p class="p2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+            amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
+            consequat sunt nostrud ametAmet minim mollit non deserunt ullamco est sit aliqua
+            dolor do amet sint. Velit officia
+            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet..</p>
+
+        </div>
+        <div class="divbtn">
+          <button type="submit" class="btn btnsavoirplus">En Savoir plus</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
