--- a/src/app/home/property/property.component.html
+++ b/src/app/home/property/property.component.html
@@ -1,28 +1,19 @@
 <div class="container">
-
   <div class="txthp">
     <h1 class="txth">Propriétés populaires</h1>
     <p class="txtp">Nous sommes ravis de vous présenter nos dernières nouveautés chercher et trouver votre prochain
       demeure </p>
   </div>
-
   <div class="row row-cols-1 row-cols-md-3 g-4">
-
     <div class="col">
       <div class="card">
-        <div class="inner">
-
-          <img src="../assets/images/immo2.png" alt="" class="card-img" srcset="">
-        </div>
-
+        <img src="../assets/images/house.png" alt="" class="card-img" srcset="">
 
         <div class="card-img-overlay">
           <div class="card-body text-light">
             <button type="submit" class="btn btnConsulte">A Louer</button>
             <button type="submit" class="btn btnPh"><i class="bi bi-camera"></i>&nbsp;&nbsp;15</button>
             <button type="submit" class="btn btnVi"><i class="bi bi-camera-video"></i>&nbsp;&nbsp;05</button>
-
-
           </div>
         </div>
         <div class="card-body">
@@ -53,9 +44,87 @@
         </div>
       </div>
     </div>
+    <div class="col">
+      <div class="card">
+        <img src="../assets/images/house.png" alt="" class="card-img" srcset="">
 
+        <div class="card-img-overlay">
+          <div class="card-body text-light">
+            <button type="submit" class="btn btnConsulte">A Louer</button>
+            <button type="submit" class="btn btnPh"><i class="bi bi-camera"></i>&nbsp;&nbsp;15</button>
+            <button type="submit" class="btn btnVi"><i class="bi bi-camera-video"></i>&nbsp;&nbsp;05</button>
+          </div>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title cartitle">Bravo Apollo Apartments</h5>
+          <p class="card-text">Date d’ajout: {{date}}</p>
+          <p class="card-text">
+            <i class="bi bi-geo-alt-fill"></i>
+            {{location?.latitude}} {{location?.city}} {{location?.longitude}}
+          </p>
+          <div class="row">
+            <div class="col">
+              <p class="nbr"><i class="bi bi-door-closed-fill"></i>&nbsp;&nbsp;6 Chambres</p>
+            </div>
+            <div class="col">
+              <p class="nbr"><i class="bi bi-0-square"></i>&nbsp;&nbsp;3 Salle de bain</p>
+            </div>
+            <div class="col">
+              <p class="nbr"><i class="bi bi-house-door"></i>&nbsp;&nbsp;2 Sallons</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 mtn">
+              <p class="cardF">200.000 Fcfa / Mois</p>
+            </div>
+            <div class="col-sm-4 icn"><i class="bi bi-share"></i> &nbsp;&nbsp; <i class="bi bi-heart"></i></div>
+          </div>
 
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="../assets/images/house.png" alt="" class="card-img" srcset="">
+
+        <div class="card-img-overlay">
+          <div class="card-body text-light">
+            <button type="submit" class="btn btnConsulte">A Louer</button>
+            <button type="submit" class="btn btnPh"><i class="bi bi-camera"></i>&nbsp;&nbsp;15</button>
+            <button type="submit" class="btn btnVi"><i class="bi bi-camera-video"></i>&nbsp;&nbsp;05</button>
+          </div>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title cartitle">Bravo Apollo Apartments</h5>
+          <p class="card-text">Date d’ajout: {{date}}</p>
+          <p class="card-text">
+            <i class="bi bi-geo-alt-fill"></i>
+            {{location?.latitude}} {{location?.city}} {{location?.longitude}}
+          </p>
+          <div class="row">
+            <div class="col">
+              <p class="nbr"><i class="bi bi-door-closed-fill"></i>&nbsp;&nbsp;6 Chambres</p>
+            </div>
+            <div class="col">
+              <p class="nbr"><i class="bi bi-0-square"></i>&nbsp;&nbsp;3 Salle de bain</p>
+            </div>
+            <div class="col">
+              <p class="nbr"><i class="bi bi-house-door"></i>&nbsp;&nbsp;2 Sallons</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-8 mtn">
+              <p class="cardF">200.000 Fcfa / Mois</p>
+            </div>
+            <div class="col-sm-4 icn"><i class="bi bi-share"></i> &nbsp;&nbsp; <i class="bi bi-heart"></i></div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="txthp">
+    <button type="submit" class="btn btnvoirplus">En Voir plus</button>
 
   </div>
-
 </div>
