--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,73 @@
-<p>footer works!</p>
+<footer class="footer-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-widget">
+          <div class="logo">
+            <a routerLink="/">
+              <img src="../assets/images/logo.png" class="imglogo" alt="logo">
+            </a>
+            <span class="txtlogo">Renta immo</span>
+            <p>Les propriétés sont les plus économiques, vous avez donc la
+              possibilité de trouver une opportunité,
+              c'est la responsabilité principale envers les clients</p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-widget pl-40">
+          <h3>Informations</h3>
+
+          <ul>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">À propos de nous</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Propriétés</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Carriére</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Paiements</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Article de blog</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-widget pl-40">
+          <h3>Liens rapides</h3>
+
+          <ul>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/index">Ajouter une propriété</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/about">Termes et Conditions</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/blog">Ligne d'aide</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/team">Nos agents</a></li>
+            <li><i class="icofont-simple-right"></i> <a routerLink="/testimonial">Caracteristiques</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-widget">
+          <h3>Adresse</h3>
+          <p class="find-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p>
+
+          <ul class="find-us">
+            <li>
+              <i class="icofont-location-pin"></i> 28/A Street, New York City
+            </li>
+            <li>
+              <i class="icofont-phone"></i>
+              <a href="tel:+880123456789">+88 0123 456 789</a>
+            </li>
+            <li>
+              <i class="icofont-ui-message"></i>
+              <a href="mailto:info@kiaz.com">info@kiaz.com</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<div class="top-btn">
+  <i class="icofont-scroll-long-up"></i>
+</div>
