--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,14 +2,17 @@
   <div class="container">
     <div class="row ">
       <div class="col-10">
-        <p>Urban-Africa@alakham.com</p>
+        <p> <i class="bi bi-send-fill"></i>&nbsp;&nbsp;Urban-Africa@alakham.com</p>
       </div>
       <div class="col">
-        <p> 77 777 77 57</p>
+        <p> <i class="bi bi-telephone"></i>&nbsp;&nbsp;77 777 77 57</p>
       </div>
     </div>
   </div>
-
+</div>
+<div class="container testmobile">
+  <p class="p1"> <i class="bi bi-send-fill"></i>&nbsp;&nbsp;Urban-Africa@alakham.com</p>
+  <p class="p2"> <i class="bi bi-telephone"></i>&nbsp;&nbsp;77 777 77 57</p>
 </div>
 <nav class="navbar navbar-expand-lg navbar-white bg-white">
   <div class="container">
@@ -38,8 +41,10 @@
           <a class="nav-link " href="#">Contact</a>
         </li>
       </ul>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <button type="submit" class="btn btnConnect">Se connecter</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <button type="submit" class="btn btnInscrire">S’inscrire</button>
+      <div>
+        <button type="submit" class="btn btnConnect">Se connecter</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button type="submit" class="btn btnInscrire">S’inscrire</button>
+      </div>
 
     </div>
   </div>
