--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
 <app-slide></app-slide>
 <app-property></app-property>
+<app-about></app-about>
+<app-type-property></app-type-property>
+<app-gallery></app-gallery>
+<app-team></app-team>
+<app-footer></app-footer>
