--- a/src/app/home/property/property.component.css
+++ b/src/app/home/property/property.component.css
@@ -3,7 +3,7 @@
 }
 .txthp {
   text-align: center;
-  padding: 95px;
+  padding: 60px;
 }
 .txthp .txtp {
   font-family: "Open Sans";
@@ -28,6 +28,7 @@
   transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
     0.3s box-shadow,
     0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+  cursor: pointer;
 }
 .card:hover {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
@@ -70,7 +71,7 @@
 }
 .btnConsulte {
   padding: 7px 10px;
-  background: #6ea72f;
+  background: #ffffff;
   border-radius: 6px;
   margin-top: 91px;
   font-size: 12px;
@@ -84,8 +85,26 @@
 .nbr i {
   color: #6ea72f;
 }
+.btnvoirplus {
+  padding: 12px 66px;
+  background: #6ea72f;
+  border-radius: 6px;
+  margin-top: 1px;
+  font-size: 20px;
+  margin-left: -17px;
+  color: #ffffff;
+}
 /* responsive mobile */
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 260px) and (max-width: 540px) {
+  .btnvoirplus {
+    padding: 10px 40px;
+    background: #6ea72f;
+    border-radius: 6px;
+    margin-top: 1px;
+    font-size: 18px;
+    margin-left: -17px;
+    color: #ffffff;
+  }
   .txthp {
     text-align: center;
     padding: 15px;
