--- a/src/app/home/team/team.component.css
+++ b/src/app/home/team/team.component.css
@@ -1,5 +1,5 @@
 .full {
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   padding: 65px;
 }
 
@@ -42,6 +42,20 @@ h1 {
 }
 .divbtn {
   display: flex;
+}
+.btnConnect {
+  padding: 8px 40px;
+  background: #ebebeb;
+  border-radius: 6px;
+  font-size: 13px;
+  color: #6ea72f;
+}
+.btnInscrire {
+  padding: 8px 40px;
+  background: #6ea72f;
+  border-radius: 6px;
+  font-size: 13px;
+  color: #ffffff;
 }
 /* responsive mobile */
 @media only screen and (min-width: 260px) and (max-width: 540px) {
