--- a/src/app/page/cequenousfaisons/carousel/carousel.component.html
+++ b/src/app/page/cequenousfaisons/carousel/carousel.component.html
@@ -1,1 +1,111 @@
-<p>carousel works!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+<section class="bgcontainer">
+
+  <div class="container">
+
+    <div class="container-fluid">
+      <div class="txthp">
+        <h1 class="txth">Notre équipe</h1>
+      </div>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <!-- <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div> -->
+        <div class="carousel-inner pb-5">
+          <div class="carousel-item active">
+            <div class="wrapper">
+              <div class="container">
+                <div class="profile">
+                  <div class="imgBox">
+                    <img src="/assets/images/pers1.png">
+                  </div>
+                  <h2>
+                    <h6>Abdoul Diop</h6>
+                    <small>Agent</small>
+                  </h2>
+                </div>
+              </div>
+              <div class="container" id="slidemasque">
+                <div class="profile">
+                  <div class="imgBox">
+                    <img src="/assets/images/pers2.png">
+                  </div>
+                  <h2>
+                    <h6>Amy ndiaye</h6>
+                    <small>Agent</small>
+                  </h2>
+                </div>
+              </div>
+              <div class="container" id="slidemasque">
+                <div class="profile">
+                  <div class="imgBox">
+                    <img src="/assets/images/pers3.png">
+                  </div>
+                  <h2>
+                    <h6>Sidi hamed ly</h6>
+                    <small>Agent</small>
+                  </h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="wrapper">
+              <div class="container">
+                <div class="profile">
+                  <div class="imgBox">
+                    <img src="/assets/images/pers1.png">
+                  </div>
+                  <h2>
+                    <h6>Abdoul Diop</h6>
+                    <small>Agent</small>
+                  </h2>
+                </div>
+              </div>
+              <div class="container" id="slidemasque">
+                <div class="profile">
+                  <div class="imgBox">
+                    <img src="/assets/images/pers2.png">
+                  </div>
+                  <h2>
+                    <h6>Amy ndiaye</h6>
+                    <small>Agent</small>
+                  </h2>
+                </div>
+              </div>
+              <div class="container" id="slidemasque">
+                <div class="profile">
+                  <div class="imgBox">
+                    <img src="/assets/images/pers3.png">
+                  </div>
+                  <h2>
+                    <h6>Sidi hamed ly</h6>
+                    <small>Agent</small>
+                  </h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</section>
