--- a/src/app/page/cequenousfaisons/cequenousfaisons.component.html
+++ b/src/app/page/cequenousfaisons/cequenousfaisons.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
-<app-banner></app-banner>
+<app-team></app-team>
 <app-card></app-card>
+<app-carousel></app-carousel>
 <app-footer></app-footer>
