--- a/src/app/page/cequenousfaisons/card/card.component.css
+++ b/src/app/page/cequenousfaisons/card/card.component.css
@@ -1,6 +1,7 @@
 .imgeces {
   object-fit: cover;
   width: 100% !important;
+  padding: 40px;
 }
 :host ::ng-deep .mat-card {
   transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -10,11 +11,41 @@
   border-radius: 4px;
 }
 .card {
-  background-color: rgb(132, 151, 133);
+  background-color: #eef7ff;
   width: 50px;
+  align-items: center;
   height: 30px;
   padding: auto;
+  justify-content: center;
 }
 #testt {
-  padding: 30px;
+  padding: 0px 30px 30px 40px;
+  text-align: justify;
+}
+.cardsection {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+/* responsive mobile */
+@media only screen and (min-width: 260px) and (max-width: 540px) {
+  .imgeces {
+    object-fit: cover;
+    width: 100% !important;
+    padding: 20px;
+  }
+  #testt {
+    padding: 0px 20px 0px 20px;
+    text-align: justify;
+  }
+}
+
+/* responsive tablette */
+@media only screen and (min-width: 768px) and (max-width: 920px) {
+  h2 {
+    font-size: 17px;
+  }
+  .col-md-10 {
+    width: 100%;
+  }
 }
