--- a/src/app/page/cequenousfaisons/team/team.component.html
+++ b/src/app/page/cequenousfaisons/team/team.component.html
@@ -1,1 +1,14 @@
-<p>team works!</p>
+<div class="about-title about-title-bg">
+  <div class="d-table">
+    <div class="d-table-cell">
+      <div class="container">
+        <div class="about-title-text">
+          <h2>Ce que nous faisons</h2>
+          <ul>
+            <li><a routerLink="/">Accueil/</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
