--- a/src/app/page/list-bien/list-bien.component.css
+++ b/src/app/page/list-bien/list-bien.component.css
@@ -133,3 +133,10 @@ nav {
 nav ul li a {
   color: #000000;
 }
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
