--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -19,7 +19,7 @@
     <a class="navbar-brand" routerLink="/">
       <!-- <img src="../assets/images/rentalservices.jpeg" width="100" height="100" class="d-inline-block align-top" alt=""> -->
       <img src="../assets/images/rentalservices.jpeg" class="d-inline-block align-top imglogo" alt="">
-      <span class="txtlogo"> Rental Immo</span>
+      <!-- <span class="txtlogo"> Rental Immo</span> -->
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,6 +37,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link " routerLink="/listebien">Nos biens</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/cequenousfaisons">Nos services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " routerLink="/contact">Contact</a>
