--- a/src/app/page/detail-property/detail-property.component.html
+++ b/src/app/page/detail-property/detail-property.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
-<app-banner></app-banner>
+<app-bannerdetailpro></app-bannerdetailpro>
 
 <div class="container">
   <div class="container">
     <div class="container">
-      <div class="row">
-        <div class="col-8 carcontainer">
+      <div class="row grow">
+        <div class="col-lg-8 col-md-7 col-sm-6 carcontainer">
 
           <div class="card">
             <div class="card-body">
@@ -99,7 +99,7 @@
             </iframe>
           </div>
         </div>
-        <div class="col-4 container">
+        <div class="col-lg-4 col-md-5 col-sm-6 container">
 
           <div class="divtable">
             <h2>Commodités</h2>
