--- a/src/app/page/faq/faq.component.html
+++ b/src/app/page/faq/faq.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-banner></app-banner>
+<app-bannerfaq></app-bannerfaq>
 
 <div class="container">
   <div class="blog-post-top pt-5">
