--- a/src/app/page/home/about/about.component.html
+++ b/src/app/page/home/about/about.component.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="divbtn">
-          <button type="submit" class="btn btnsavoirplus">En Savoir plus</button>
+          <button type="submit" routerLink="/about" class="btn btnsavoirplus">En Savoir plus</button>
         </div>
 
       </div>
