--- a/src/app/page/home/gallery/gallery.component.html
+++ b/src/app/page/home/gallery/gallery.component.html
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="divbtn">
-      <button type="submit" class="btn btnsavoirplus">En Savoir plus</button>
+      <button type="submit" routerLink="/listebien" class="btn btnsavoirplus">En Savoir plus</button>
     </div>
   </div>
 </section>
