--- a/src/app/page/home/slide/slide.component.html
+++ b/src/app/page/home/slide/slide.component.html
@@ -15,7 +15,8 @@
             également trouver ici des
             biens en cohabitation, vous avez donc beaucoup d'opportunités</p>
 
-          <button type="submit" class="btn btnConsulte">Consulter Notre Catologue</button>
+          <button type="submit" routerLink="/cequenousfaisons" class="btn btnConsulte">Consulter Notre
+            Catologue</button>
 
         </div>
         <div class="col formRech">
@@ -54,7 +55,8 @@
             également trouver ici des
             biens en cohabitation, vous avez donc beaucoup d'opportunités</p>
 
-          <button type="submit" class="btn btnConsulte">Consulter Notre Catologue</button>
+          <button type="submit" routerLink="/cequenousfaisons" class="btn btnConsulte">Consulter Notre
+            Catologue</button>
 
         </div>
         <div class="col formRech">
@@ -94,7 +96,8 @@
             également trouver ici des
             biens en cohabitation, vous avez donc beaucoup d'opportunités</p>
 
-          <button type="submit" class="btn btnConsulte">Consulter Notre Catologue</button>
+          <button type="submit" routerLink="/cequenousfaisons" class="btn btnConsulte">Consulter Notre
+            Catologue</button>
 
         </div>
         <div class="col formRech">
