--- a/src/app/page/list-bien/list-bien.component.html
+++ b/src/app/page/list-bien/list-bien.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<app-banner></app-banner>
+<app-bannerlistpro></app-bannerlistpro>
 
 <section class="body">
 
-  <div class="col-md-2 side">
+  <div class="col-lg-2 col-md-3 col-sm-12 side">
     <h1>Filtrer par:</h1>
     <div class="status">
       <h2>Status</h2>
@@ -147,8 +147,8 @@
 
     </div>
   </div>
-  <div class="col-md-9  container">
-    <div class="pt-5"></div>
+  <div class="col-lg-9 col-md-9 col-sm-12 ">
+
     <div class="container1">
       <div class="divrecherche">
         <p>Maison, appartement, studio, box : Rechercher et trouver</p>
@@ -194,8 +194,8 @@
       </div>
 
     </div>
-    <div class="row">
-      <div class="col">
+    <div class="row lgrow">
+      <div class="col-lg-6 col-md-6 col-sm-12">
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
@@ -397,7 +397,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-6 col-md-6 col-sm-12">
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
@@ -600,7 +600,7 @@
         </div>
       </div>
     </div>
-    <div class="container1">
+    <div class="container2">
       <nav aria-label="...">
         <ul class="pagination">
           <li class="page-item disabled">
