--- a/src/app/page/banner/bannerfaq/bannerfaq.component.html
+++ b/src/app/page/banner/bannerfaq/bannerfaq.component.html
@@ -3,9 +3,9 @@
     <div class="d-table-cell">
       <div class="container">
         <div class="about-title-text">
-          <h2>Ce que nous faisons</h2>
+          <h2>FAQs</h2>
           <ul>
-            <li><a routerLink="/">Accueil&nbsp;|&nbsp;Ce que nous faisons</a></li>
+            <li><a routerLink="/">Accueil&nbsp;|&nbsp;Faq</a></li>
           </ul>
         </div>
       </div>
