--- a/src/app/page/detail-property/detail-property.component.css
+++ b/src/app/page/detail-property/detail-property.component.css
@@ -92,3 +92,118 @@
   color: #ffffff;
   width: 100%;
 }
+/* responsive mobile */
+@media only screen and (min-width: 260px) and (max-width: 540px) {
+  .carcontainer {
+    padding-top: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  h1 {
+    font: 400 14px/32px Roboto, sans-serif;
+    letter-spacing: normal;
+    margin: 0 0 0px;
+  }
+  .btnInscrire {
+    padding: 3px 6px;
+    background: #6ea72f;
+    border-radius: 6px;
+    font-size: 10px;
+    color: #ffffff;
+  }
+  .card-text {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+    color: #494949;
+  }
+  .badge {
+    background-color: #afd9ff;
+    color: #0a31e0;
+    font-size: 9px;
+    padding: 5px 5px;
+    font-weight: 100;
+  }
+  .nbr {
+    font-size: 10px;
+    color: #333333;
+  }
+  .img-container {
+    width: 100%;
+    height: 100%;
+  }
+  .apropos {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+    color: #333333;
+    text-align: justify;
+    padding: 12px;
+    margin-top: 3rem;
+  }
+  iframe {
+    width: 100%;
+  }
+  .table {
+    font-size: 12px;
+  }
+  h2 {
+    font: 500 18px/2px Roboto, sans-serif;
+    letter-spacing: 0.0125em;
+    margin: 0 0 14px;
+  }
+
+  .divtable {
+    border: solid 1px #e9e7e7;
+    padding: 20px;
+    margin-top: 27px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 0px;
+  }
+  .grow {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+
+/* responsive tablette */
+@media only screen and (min-width: 768px) and (max-width: 920px) {
+  .carcontainer {
+    padding-top: 50px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .img-container {
+    width: 100%;
+    height: 100%;
+  }
+  .apropos {
+    margin-top: 3rem;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 32px;
+    width: 660px;
+    color: #333333;
+    text-align: justify;
+    padding: 12px;
+  }
+  iframe {
+    width: 650px;
+    height: 500px;
+  }
+  .badge {
+    background-color: #afd9ff;
+    color: #0a31e0;
+    font-size: 10px;
+    padding: 5px 10px;
+    font-weight: 100;
+  }
+}
