--- a/src/app/page/home/property/property.component.html
+++ b/src/app/page/home/property/property.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
-      <div class="card">
+      <div class="card" routerLink="detailproperty">
         <img src="../assets/images/house.png" alt="" class="card-img" srcset="">
 
         <div class="card-img-overlay">
@@ -124,7 +124,7 @@
     </div>
   </div>
   <div class="txthp">
-    <button type="submit" class="btn btnvoirplus">En Voir plus</button>
+    <button type="submit" routerLink="/listebien" class="btn btnvoirplus">En Voir plus</button>
 
   </div>
 </div>
