--- a/src/app/page/list-bien/list-bien.component.css
+++ b/src/app/page/list-bien/list-bien.component.css
@@ -1,7 +1,6 @@
 .side {
   background-color: #f5f7fc;
   padding: 50px 0px 0px 50px;
-  width: 20%;
 }
 
 .body {
@@ -78,9 +77,6 @@ h1 {
   cursor: pointer;
   /* height: 150px; */
 }
-.col-md-8 {
-  height: 140px;
-}
 .card:hover {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
   transform: scale(1.009);
@@ -91,12 +87,11 @@ h1 {
   align-items: center;
 }
 .divrecherche {
-  width: 500px;
-  width: 651px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
   margin-bottom: 30px;
+  margin-top: 40px;
 }
 .divrecherche p {
   font-family: "Open Sans";
@@ -108,6 +103,11 @@ h1 {
   color: #2a2c30;
 }
 .container1 {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.container2 {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -139,4 +139,79 @@ nav ul li a {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+.lgrow {
+  padding: 0px 0px 0px 50px;
+}
+.col-md-8 {
+  height: 100%;
+}
+
+/* responsive mobile */
+@media only screen and (min-width: 260px) and (max-width: 540px) {
+  .side {
+    display: none;
+  }
+  .col-lg-9 {
+    width: 100%;
+  }
+  .container1 {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+  }
+  .container2 {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .divrecherche {
+    padding: 15px;
+    margin: 15px;
+  }
+  .mb-3 {
+    margin-bottom: 1rem !important;
+  }
+  .form-select {
+    font-size: 13px;
+  }
+  .btnConnect {
+    margin-top: 20px;
+  }
+  .lgrow {
+    padding: 15px;
+  }
+  .nbr {
+    font-size: 12px;
+    color: #333333;
+  }
+  nav {
+    margin-top: 0px;
+    margin-bottom: 30px;
+  }
+}
+
+/* responsive tablette */
+@media only screen and (min-width: 768px) and (max-width: 920px) {
+  .lgrow {
+    padding: 0px 16px 0px 16px;
+  }
+
+  .cartitle {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 10px;
+  }
+  .cardF {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    color: #6ea72f;
+    line-height: 15px;
+  }
+  .side {
+    background-color: #f5f7fc;
+    padding: 50px 0px 0px 30px;
+  }
 }
