--- a/src/app/page/dashPropr/nav-prop/nav-prop.component.html
+++ b/src/app/page/dashPropr/nav-prop/nav-prop.component.html
@@ -110,7 +110,6 @@
         <mat-icon (click)="drawer.toggle();" >format_align_left</mat-icon>
       </mat-button-toggle>
      </div>
-     
      <div class="row">
       <div class=" col-6 col-lg-4  ">
         
@@ -129,6 +128,6 @@
     </div>
     
     </mat-toolbar>
-    <app-dashboard></app-dashboard>
+    <app-dashboard-prop></app-dashboard-prop>
   </mat-sidenav-content>
 </mat-sidenav-container>
