--- a/src/app/page/dashboardDetailsProp/nav-details/nav-details.component.html
+++ b/src/app/page/dashboardDetailsProp/nav-details/nav-details.component.html
@@ -129,6 +129,6 @@
     </div>
     
     </mat-toolbar>
-    <app-dashboard></app-dashboard>
+    <app-dashboard-details-pro></app-dashboard-details-pro>
   </mat-sidenav-content>
 </mat-sidenav-container>
