--- a/src/app/page/dashProfilUser/dashboard-profil-user/dashboard-profil-user.component.html
+++ b/src/app/page/dashProfilUser/dashboard-profil-user/dashboard-profil-user.component.html
@@ -16,9 +16,9 @@
       <div class="col-sm-4 col-md-4  ">
         <mat-card>
           <img src="assets/images/pers1.png" alt="" class="imagelogo " alt="">
-          <h3 class="text-center">Cameron Williamson</h3>
+          <h3 class="text-center pt-2" id="titre">Cameron Williamson</h3>
           <p class="text-center">Agent immobilier</p>
-          <span class="text-center"><mat-icon>call</mat-icon>77 456 77 90</span>
+          <span class="text-center" id="icon"><mat-icon>call</mat-icon>77 456 77 90</span>
           <span class="text-center"><mat-icon>email</mat-icon>cameron@immo.com</span>
           <span class="text-center"><mat-icon>location_on</mat-icon>Dakar ouakame cité Comico</span>
           <a mat-flat-button routerLink="#" class="text-left">Parametre</a>
